--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "node": "11.6.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "cross-env NODE_ENV=development node server/server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "dependencies": {
+    "cross-env": "^6.0.3",
+    "express": "^4.17.1",
     "gsap": "^3.0.4",
     "lodash": "^4.17.15",
     "next": "9.1.6",
