--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "dev": "cross-env NODE_ENV=development node server/server.js",
     "build": "next build",
     "start": "cross-env NODE_ENV=production node server/server.js",
+    "test": "cross-env NODE_ENV=test jest",
     "lint:css": "stylelint \"./src/**\"",
     "lint": "eslint \"src/**\" \"pages/**\" \"api/**\" && yarn lint:css"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
-    "gsap": "^3.0.4",
     "lodash": "^4.17.15",
     "next": "9.1.6",
     "polished": "^3.4.2",
@@ -18,6 +19,7 @@
     "prismic-reactjs": "^1.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-gsap": "^1.2.0",
     "react-scroll": "^1.7.15",
     "styled-components": "4.2.0"
   },
@@ -30,16 +32,24 @@
     "@babel/preset-react": "^7.7.4",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "cross-env": "^6.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
+    "jest": "^24.9.0",
+    "jest-styled-components": "^6.3.4",
     "prop-types": "^15.7.2",
+    "react-test-renderer": "16.8.6",
     "stylelint": "^12.0.1",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-config-styled-components": "^0.1.1",
