--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   "rules": {
     "arrow-parens": [1, "always"],
     "camelcase": "off",
+    "no-case-declarations": "off",
     "no-console": "off",
     "global-require": "off",
     "no-unused-vars": "off",
