--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/express": "^4.17.2",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
+    "@types/next": "^9.0.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
@@ -45,6 +47,7 @@
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
+    "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
