--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "lichtbrecher",
   "version": "1.0.0",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node server/server.js",
-    "build": "next build",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "build": "next build  && tsc && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node server/server.js",
     "test": "cross-env NODE_ENV=test jest",
     "lint:css": "stylelint \"./src/**\"",
@@ -16,6 +16,7 @@
     }
   },
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
@@ -35,6 +36,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.2",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/jest": "^25.1.2",
@@ -47,7 +49,6 @@
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
-    "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -59,6 +60,7 @@
     "enzyme-to-json": "^3.4.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jest": "^23.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -66,6 +68,8 @@
     "husky": "^4.0.0-beta.5",
     "jest": "^24.9.0",
     "jest-styled-components": "7.0.0",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "react-test-renderer": "16.8.6",
     "stylelint": "^12.0.1",
