--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
@@ -22,12 +23,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "outDir": ".next"
   },
   "exclude": [
     "node_modules",
     ".next",
-    "**/*.test.tsx.snap"
+    "**/*.test.tsx.snap",
+    "server/**/*.*"
   ],
   "include": [
     "**/*.ts",
