--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "next build  && tsc && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node server/server.js",
+    "start": "cross-env NODE_ENV=production node .next/server/server.js",
     "test": "cross-env NODE_ENV=test jest",
     "lint:css": "stylelint \"./src/**\"",
     "lint": "eslint \"src/**\" \"pages/**\" \"api/**\" && yarn lint:css",
@@ -16,7 +16,6 @@
     }
   },
   "dependencies": {
-    "@zeit/next-typescript": "^1.1.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
@@ -76,6 +75,7 @@
     "stylelint-config-standard": "^19.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.9.0",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "license": "MIT ©Copyright Arseny Bobrov, 2020",
