--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "jest/no-disabled-tests": "off",
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
+    "jest/prefer-spy-on": "warn",
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
