--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-dynamic-import": "^2.1.0",
     "cross-env": "^6.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -69,7 +71,6 @@
     "jest-styled-components": "7.0.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "prop-types": "^15.7.2",
     "react-test-renderer": "16.8.6",
     "stylelint": "^12.0.1",
     "stylelint-config-standard": "^19.0.0",
