--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "next": "9.1.6",
     "polished": "^3.4.2",
@@ -36,9 +38,11 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.8.3",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/jest": "^25.1.2",
+    "@types/js-cookie": "^2.2.4",
     "@types/lodash": "^4.14.149",
     "@types/next": "^9.0.0",
     "@types/node": "^13.7.0",
