feat(eslint): update rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,9 +25,10 @@
     "jest/no-disabled-tests": "off",
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
-    "jest/prefer-spy-on": "warn",
+    "jest/prefer-spy-on": "off",
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "off",
+    "jest/prefer-inline-snapshots": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
     "react/prop-types": "off",
     "react/require-default-props": "off",
