--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "lichtbrecher",
-  "version": "3.0.3",
-  "private": true,
+  "version": "3.1.0",
+  "license": "MIT",
+  "author": {
+    "name": "Arseny Bobrov, Daniel Hargesheimer"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
