--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": [
     "airbnb",
+    "prettier",
+    "prettier/react",
+    "prettier/@typescript-eslint",
     "plugin:jest/all"
   ],
   "parser": "@typescript-eslint/parser",
@@ -13,12 +16,14 @@
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-use-before-define": "error",
+    "no-use-before-define": "off",
+    "no-undef": "off",
     "arrow-parens": [1, "always"],
     "camelcase": "off",
     "no-case-declarations": "off",
     "no-console": "off",
     "global-require": "off",
-    "no-unused-vars": "off",
     "jest/no-disabled-tests": "off",
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
