--- a/.eslintrc
+++ b/.eslintrc
@@ -26,11 +26,13 @@
     "global-require": "off",
     "jest/no-disabled-tests": "off",
     "jest/no-focused-tests": "error",
-    "jest/no-identical-title": "error",
+    "jest/no-identical-title": "off",
     "jest/prefer-spy-on": "off",
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "off",
     "jest/prefer-inline-snapshots": "off",
+    "jest/no-export": "off",
+    "jest/no-done-callback": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
     "react/prop-types": "off",
     "react/require-default-props": "off",
