--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "lichtbrecher",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "license": "MIT",
   "author": {
-    "name": "Arseny Bobrov, Daniel Hargesheimer, Chema Mengibar, Martin Malinowski"
+    "name": "Arseny Bobrov, Daniel Hargesheimer, Chema Mengibar"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "test:watch": "jest --watch",
     "type-check": "tsc",
     "stylelint": "stylelint \"./src/**\"",
     "lint": "eslint \"src/**\" \"pages/**\" \"prismic/**\"",
@@ -19,13 +20,23 @@
     "build-storybook": "STORYBOOK_ROOT=storybook build-storybook -s ./public --no-dll"
   },
   "dependencies": {
+    "@nx-kit/flex": "^0.1.9",
+    "@nx-kit/heading": "^0.1.8",
+    "@nx-kit/link": "^0.1.8",
+    "@nx-kit/styling": "^0.1.8",
+    "@nx-kit/text": "^0.1.6",
+    "@types/react-scroll": "^1.8.2",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.19",
     "next": "^10.0.1",
     "polished": "^3.6.7",
-    "prismic-javascript": "^2.2.0",
-    "prismic-reactjs": "^1.3.0",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^2.2.1",
+    "react-scroll": "^1.8.1",
+    "react-scrollmagic": "^2.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
